# insider-intel

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  NOTICE  OPEN_UI.md  README.md  docker-compose.yml  pyproject.toml
.design-sync/: NOTES.md  config.json  conventions.md
.devcontainer/: devcontainer.json
design-system/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
docs/: CURSOR_HANDOFF.md  DEVELOPMENT.md  HANDOFF.md  PROCESS.md  RELEASES.md  ROADMAP.md  architecture.md  corpus-baseline.md  courtlistener-ingest.md  hosting.md  sourcing.md  ttps_overemployment.md
preview/: offline-store.js
scripts/: backfill_from_demo_snapshot.py  count_stale_filings.py  deploy_cloud_run.sh  enable_lanes.sh  export_demo_bundle.py  export_demo_snapshot.py  export_preview.py  launch_local.py  recover_gutted_rows.py  ui_smoke.py
shared/: settings.py
tests/: conftest.py  test_aggregator_parser.py  test_aggregator_pipeline.py  test_aggregator_storage.py  test_archive_ingest.py  test_article_processor.py  test_candidates_api.py  test_channel.py  test_classify.py  test_controls.py  test_courtlistener.py  test_datatheftnews.py  test_deep_extract.py  test_detection_articles.py  test_discover.py  test_embeddings.py  test_entities.py  test_export.py  test_extract_rate_limit.py  test_extract_ttps.py  test_feed_atom.py  test_feedly.py  test_ingest_state.py  test_itm_refresh.py  test_llm_chain.py  test_matrix_hunt_sync.py  test_pacer_purchase.py  test_reenrich.py  (+15 more)
(+132 files in other folders)
