[project]
name = "insider-intel"
version = "0.1.0"
description = "Threat intelligence news aggregator with semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pre-commit",
    "detect-secrets",
]
# CLASSIFIER_LLM_PROVIDER=anthropic (openai-compatible endpoints need no extra)
llm = [
    "anthropic>=0.40",
]

[project.scripts]
insider-intel-ingest = "apps.aggregator.__main__:main"
insider-intel-search = "apps.search.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "shared"]

[tool.hatch.build.targets.wheel.force-include]
"shared/data/itm_index.json" = "shared/data/itm_index.json"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
